[package]
name = "ankurah-org-example-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ankurah-org-example-model = { path = "../model" }
ankurah = { workspace = true }
ankurah-websocket-server = "0.7.0"
ankurah-websocket-client = "0.7.0"
ankurah-storage-sled = "0.7.0"
ankurah-storage-postgres = "0.7.0"
bb8 = "0.9"
bb8-postgres = "0.9"
anyhow = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs = "5.0"
