[package]
name = "ankurah-org-example-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ankurah-org-example-model = { path = "../model" }
ankurah = { workspace = true }
ankql = { workspace = true }
ankurah-websocket-server = "0.7.15"
ankurah-websocket-client = "0.7.15"
ankurah-storage-sled = "0.7.15"
ankurah-storage-postgres = "0.7.15"
bb8 = "0.9"
bb8-postgres = "0.9"
anyhow = { workspace = true }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs = "5.0"
