[package]
name = "ankurah-org-example-wasm-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ankurah-org-example-model = { path = "../model", features = ["wasm"] }
ankurah = { version = "0.6.8", features = ["derive", "wasm"] }
ankurah-websocket-client-wasm = "0.6.8"
ankurah-storage-indexeddb-wasm = "0.6.8"
ankurah-signals = { version = "0.6.8", features = ["wasm", "react", "jsvalue"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

